--- a/MemeMaker/MainWindow.xaml
+++ b/MemeMaker/MainWindow.xaml
@@ -12,6 +12,10 @@
         MinWidth="730"
         Icon="smile.ico">
     <Window.Resources>
+
+        <local:enabledBorderConverter x:Key="conversorBorde"></local:enabledBorderConverter>
+        
+        
         <Style TargetType="TextBlock"
                x:Key="etiquetaCampo">
             <Setter Property="Margin"
@@ -121,13 +125,20 @@
             </Grid>
             <Border Background="#FFF3D2D2"
                     BorderBrush="Black"
-                    Margin="10">
+                    Margin="10" 
+                    Height="{Binding ElementName=altoSlider, Path=Value}"
+                    Width="{Binding ElementName=anchoSlider, Path=Value}"
+                    BorderThickness="{Binding ElementName=bordeCheckBox, Path=IsChecked, Converter={StaticResource conversorBorde}}"
+                    >
                 <Grid>
-                    <Image Stretch="Fill" />
+                    <Image Stretch="Fill" Source="{Binding ElementName=imagenTextBox, Path=Text}"/>
                     <TextBlock Style="{StaticResource textoMeme}"
-                               VerticalAlignment="Top"></TextBlock>
+                               VerticalAlignment="Top" 
+                               Text="{Binding ElementName=superiorTextBox, Path=Text}"
+                               ></TextBlock>
                     <TextBlock Style="{StaticResource textoMeme}"
-                               VerticalAlignment="Bottom"></TextBlock>
+                               VerticalAlignment="Bottom"
+                               Text="{Binding ElementName=inferiorTextBox, Path=Text}"></TextBlock>
                 </Grid>
             </Border>
         </StackPanel>
